--- a/Discount-Hunter-app/Back-end/requirements.txt
+++ b/Discount-Hunter-app/Back-end/requirements.txt
@@ -3,4 +3,8 @@ uvicorn[standard]==0.32.0
 httpx==0.27.2
 pydantic==2.9.2
 pydantic-settings==2.5.2
+Pillow==10.4.0
+python-multipart==0.0.20
+beautifulsoup4==4.12.3
+lxml==5.3.0
 
