--- a/Discount-Hunter-app/Back-end/requirements.txt
+++ b/Discount-Hunter-app/Back-end/requirements.txt
@@ -3,8 +3,13 @@ uvicorn==0.32.0
 httpx==0.27.2
 pydantic==2.9.2
 pydantic-settings==2.5.2
-Pillow==10.4.0
+email-validator==2.1.0
+Pillow==11.0.0
 python-multipart==0.0.20
 beautifulsoup4==4.12.3
 lxml==5.3.0
+bcrypt==4.1.2
+python-jose==3.3.0
+PyJWT==2.10.1
+sqlalchemy==2.0.23
 
